--- a/style.css
+++ b/style.css
@@ -5,7 +5,20 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .titulo{
     font-family: 'Courier New', Courier, monospace;
     color: lightgreen;
+}
+
+.snake{
+    height: 40px;
+    margin-left: 35px;
+    margin-right: 35px;
 }
